--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -1,5 +1,5 @@
 <h1>Pig Latinizer!</h1>
-<form action="user_input" method="post">
+<form action="piglatinize" method="post">
   <p>Enter your phrase:<input type="text" name="user_phrase"></p>
   <input type="submit" name="submit" value="Piggify!">
 </form>
